# CMake

./: CMakeLists.txt  CREDITS  README.md
ext/HelloLib/: CMakeLists.txt
ext/HelloLib/include/hellolib/: hello.h  hellomanager.h
ext/HelloLib/src/: hello.cpp  hellomanager.cpp
src/: CMakeLists.txt  main.cpp
